master fix bug where image would overflow on mobile

--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -86,7 +86,3 @@ p.lead {
     }
   }
 }
-
-.ty-image-500 {
-  max-width: 500px;
-}
